--- a/index.html
+++ b/index.html
@@ -51,10 +51,17 @@
         <aside>
             <p><em>O primeiro desafio da Trybe veio para provar o quanto pude aprender nesse curto espaço de tempo. Só tenho a agradecer ao mestre Jack, Zezé e Panta sempre dispostos a tirar as mínimas dúvidas, Karina sempre acolhedora e o Bruno dando aquele gás na soft skills.Lets que lets!</em></p>
         </aside>
+<table class="table"><thehead><th>Checklist de atividades realizadas - Modulo 1 </th></thehead>
+    <tbody><tr><td>Atividade</td><td>Total realizadas</td></tr>
+<tr><td>Bloco 1 - Unix & Bash</td><td>5</td></tr>
+<tr><td>Bloco 2 -  Git, GitHub e Internet</td><td>6</td></tr>
+<tr><td>Bloco 3 -  Introdução à HTML e CSS</td><td>13</td></tr></tbody>
+<tfoot><tr><td>Total de atividades:</td><td>24</td></tr></tfoot></table>
     </main>
     <nav><ul><li><a href="licoes_aprendidas">Lições aprendidas</a></li></ul>
         <ul><li><a href="licoes_a_aprender">Lições a aprender</a></li></ul>
         <ul><li><a href="experiencia">Experiência na Trybe</a></li></ul></nav>
+    
     <footer id="rodape">
             <p>Elaborado por: <a href="https://www.linkedin.com/in/renata-domingues-369358bb/" target="_blank"> Renata
                     Domingues</a><br> Atividade proposta pela <a href="https://www.betrybe.com/"
