Refatoracao e melhoria do codigo

--- a/index.html
+++ b/index.html
@@ -7,77 +7,69 @@
   </head>
   <body>
     <header id="cabecalho">
-      <h1 id="titulo">Lições aprendidas - Trybe!</h1>
-      <p><a href="https://www.betrybe.com/" target="_blank">Home</a></p>
-      <p><a href="https://app.betrybe.com/course" target="_blank">Login</a></p>
+      <h1 id="titulo">Lições aprendidas - Trybe</h1>
     </header>
-    <img id="minha_foto" src="foto_fas.jpg" alt="Foto Flávio Alves" />
-    <p>
-      <a href="https://www.linkedin.com/in/fasouzarj" target="_blank"
-        >Flávio Alves</a
-      >
-    </p>
-     <nav>
-        <p>Lições</p>
-        <section id="lista_licoes_aprendidas">
-        <div>
-                <table>
-             <td>
-                <ol id="licoes_aprendidas">
-                  <li>Unix</li>
-                  <li>Bash</li>
-                  <li>Git</li>
-                  <li>Git Hub</li>
-                  <li>Internet</li>
-                  <li>HTML</li>
-                  <li>CSS</li>
-                  <li>Autoconhecimento</li>
-                  <li>Empatia</li>
-                  <li>Profissionalismo</li>
-                </ol>
-              </td>
-          </div>
-          </section>
-        <section id = "lista_licoes_a_aprender">
-          <div>
-        <td>
-                <ul id="licoes_a_aprender">
-                  <li>JavaScript</li>
-                  <li>Python</li>
-                  <li>Java</li>
-                  <li>Node</li>
-                  <li>UX</li>
-                  <li>UI</li>
-                  <li>Kotlin</li>
-                  <li>Kubernetes</li>
-                  <li>Gestão do Tempo</li>
-                  <li>Gestão de Crises</li>
-                </ul>
-              </td>
-          </table>
-        </div>
+    <section><a href="https://www.betrybe.com/" target="_blank">Home</a></p>
+      <p><a href="https://app.betrybe.com/course" target="_blank">Login</a></p></section>
+      <section>
+        <img id="minha_foto" src="foto_fas.jpg" alt="Foto Flávio Alves" />
+        <p><a href="https://www.linkedin.com/in/fasouzarj" target="_blank">Flávio Alves</a></p>
       </section>
-      </nav>
-          <article>
+    <nav>
+      <p>Lições</p>
+      <table>
+        <tr>
+          <td>
+            <div>
+              <ol id="licoes_aprendidas">
+                <li>Unix</li>
+                <li>Bash</li>
+                <li>Git</li>
+                <li>Git Hub</li>
+                <li>Internet</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Autoconhecimento</li>
+                <li>Empatia</li>
+                <li>Profissionalismo</li>
+              </ol>
+            </div>
+            </td>
+            <td>
+            <div>
+              <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>Python</li>
+                <li>Java</li>
+                <li>Node</li>
+                <li>UX</li>
+                <li>UI</li>
+                <li>Kotlin</li>
+                <li>Kubernetes</li>
+                <li>Gestão do Tempo</li>
+                <li>Gestão de Crises</li>
+              </ul>
+            </div>
+          </td>
+        </tr>
+      </table>
+    </nav>
+    <article>
+      <section>
+      <div>
         <p>
-          Muito mais que aprender Front-end utilizando HTML, CSS, Javascript e
-          React; Back-end utilizando Banco de Dados, API Rest implementando
-          requisições server-side, autenticação, segurança e deploy; ou ainda
-          aprender Ciência da Computação com Algoritmos, Estrutura de Dados,
-          Paradigmas de programação, Python e Arquitetura de Computadores, na
-          Trybe aprendemos a desenvolver nossas habilidades interpessoais,
-          conhecidas como Soft Skills, algo muito valorizado no mercado de
-          trabalho.
+          Mais que aprender Front-end utilizando HTML, CSS, Javascript e React; Back-end utilizando Banco de Dados, API Rest implementando requisições server-side, autenticação, segurança e deploy; ou ainda aprender Ciência da Computação com Algoritmos, Estrutura de Dados, Paradigmas de programação, Python e Arquitetura de Computadores, na
+          Trybe aprendemos a desenvolver nossas habilidades interpessoais, conhecidas como Soft Skills, algo muito valorizado no mercado de trabalho.
         </p>
+      </div>
       </article>
     </section>
     <aside>
+      <div>
       <p>
-        As aulas ministradas pelo "tio Jack" se mostraram bem diferentes. Ele
-        expôe os conceitos de maneira tão natural que se torna praticamente
-        impossível não compreender, com exemplos bem práticos e sempre nos
-        estimulando a buscar conhecimento!
+        As aulas ministradas pelo "tio Jack" se mostraram bem diferentes. Ele expôe os conceitos de maneira tão natural que se torna praticamente impossível não compreender, com exemplos práticos e sempre nos estimulando a buscar conhecimento!
       </p>
+    </div>
     </aside>
     <footer id="rodape">
       <p>
