13. Utilize o Box model

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
 
         <aside id="conteudo_a_parte">
-            <h4>Sobre:</h4>
+            <h4>Links:</h4>
             A trybe é uma excelente escola de programação que vai te ajudar a se tornar um Desenvolver Web, acesso o <a href="https://www.betrybe.com/?utm_medium=cpc&utm_source=google&utm_campaign=Brand&utm_content=ad03_din_h&gclid=CjwKCAjw1JeJBhB9EiwAV612y5sX75aD0eMPptZPckrufbFSwiuYWT_xfiFkiID-MbosAO8IoyZlARoCoT0QAvD_BwE" target="_blank">Link</a> e descubra mais.<br><br>
 
             Meu portfólio: <a href="https://jonataspassos96.github.io/" target="_blank">GitHub</a><br><br>
@@ -79,6 +79,52 @@
             Meu perfil: <a href="https://www.linkedin.com/in/jonatas-passos-a07333186/" target="_blank">LinkedIn</a>
         </aside>
       </section>
+
+      <h2>Tabela do conteúdo da Trybe</h2>
+      <table>
+        <tr>
+          <th>Fundamentos</th>
+          <th>Front-End</th>
+          <th>Banck-End</th>
+          <th>Ciência da Computação</th>
+        </tr>
+        <tr>
+          <td>Unix</td>
+          <td>React</td>
+          <td>SQL</td>
+          <td>Python</td>
+        </tr>
+        <tr>
+          <td>Git</td>
+          <td>Eventos</td>
+          <td>Joins</td>
+          <td>POO</td>
+        </tr>
+        <tr>
+          <td>GitHub</td>
+          <td>React Router</td>
+          <td>ORM</td>
+          <td>Redes</td>
+        </tr>
+        <tr>
+          <td>HTML</td>
+          <td>API</td>
+          <td>Subqueries</td>
+          <td>Algoritmos</td>
+        </tr>
+        <tr>
+          <td>CSS</td>
+          <td>React Testing</td>
+          <td>MongoDB</td>
+          <td>Filas</td>
+        </tr>
+        <tr>
+          <td>JavaScript</td>
+          <td>Redux</td>
+          <td>NodeJS</td>
+          <td>Pilhas</td>
+        </tr>
+      </table>
     </div>
   </main>
 
