Correçao de espaçamento

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 
-<!DOCTYPE html>
-<html lang="PT-BR>
+  <!DOCTYPE html>
+<html lang="PT-BR">
 <meta charset= "utf-8">
 
 <header>
+    <title> Lessons Learned </title>
 <link rel="stylesheet" type="text/css"  href="style.css">
 <div id="cabecalho">
     <h1 id="titulo">The First Project </h1>
-    <title> Lessons Learned </title>
 </div>
 <nav h3 id="botoes"> <a link href="https://www.linkedin.com/in/celsofiorani/" target="_blank">LinkedIn</a> |<a link href="https://www.instagram.com/fioranicelso/" target="_blank">Instagram</a> | <a link href="https://github.com/fioranicelso target=" target="_blank" >GitHub</a></h3></nav>
 </header>  
