--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Projeto Lessons Learned -<a href="https://www.betrybe.com/" target="_blank" >Trybe (opens new window)</a></h1>
+        <nav>
+            <ul id="navbar">
+                <li>Home</li>
+                <li>About me</li>
+                <li>Trybe</li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section id="section-one">
