Atualizações no index

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         O trecho padrão original de Lorem Ipsum, usado desde o século XVI, está reproduzido abaixo para os interessados. 
     </aside>
 
-    <footer id="rodape"><em><bold>Primeiro projeto utilizando HTML e CSS.</em></bold></footer>
+    <footer id="rodape"><em><strong>Primeiro projeto utilizando HTML e CSS.</strong></em></footer>
 
 </body>
 </html>
