Adicionado tabela ao código

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 </div>
             </section>
             <!-- Artigo -->
-            <article id="artigo">
-                <section id="artigo_meu_aprendizado">
+            <section id="artigo">
+                <article id="artigo_meu_aprendizado">
                     <div class="lado-esquerdo">
                         <h2 id="artigo_titulo">Meu Aprendizado</h2>
                         <p class="text">Diferente dos demais cursos de programação a trybe me trouxe uma experiência diferente do que jamais presentiei antes. Na trybe meu aprendizado esta me rendendo um conhecimento muito melhor e mais satisfatório do que em outras
@@ -74,7 +74,7 @@
                         <p class="text">Iniciei meus estudos na trybe com um certo nivel básico de experiência e logo imaginei que não iria aprender conteúdos novos no inicio do curso, porém foi totalmente diferente como imaiginava, além de aprender novos conteúdos pode
                             ter a oportunidade de aprimorar ainda mais meus conhecimentos em HTML e CSS.</p>
                     </div>
-                </section>
+                </article>
                 <aside id="notas">
                     <div class="lado-direito">
                         <h2 id="notas_titulo">Notas de Aprendizado</h2>
@@ -83,13 +83,53 @@
                         </p>
                     </div>
                 </aside>
-            </article>
+            </section>
+            <section id="tabela">
+                <h2 id="tabela__titulo">Minha Família</h2>
+                <table>
+                    <tr>
+                        <td>Parentesco</td>
+                        <td>Nome</td>
+                        <td>Idade</td>
+                    </tr>
+                    <tr>
+                        <td>Mãe</td>
+                        <td>Odila</td>
+                        <td>61 anos</td>
+                    </tr>
+                    <tr>
+                        <td>Pai</td>
+                        <td>José Carlos</td>
+                        <td>57 anos</td>
+                    </tr>
+                    <tr>
+                        <td>Namorada</td>
+                        <td>Jaqueline</td>
+                        <td>26 anos</td>
+                    </tr>
+                    <tr>
+                        <td>Pet Dog</td>
+                        <td>Apolo</td>
+                        <td>9 anos</td>
+                    </tr>
+                    <tr>
+                        <td>Pet Dog</td>
+                        <td>Luke</td>
+                        <td>8 meses</td>
+                    </tr>
+                    <tr>
+                        <td>Pet Calopsita</td>
+                        <td>Kiko</td>
+                        <td>3 anos</td>
+                    </tr>
+                </table>
+            </section>
         </article>
     </main>
     <!-- Rodapé -->
     <footer id="rodape">
         <nav>
-            <ul id="rodape__nav">
+            <ul id="rodape__ul">
                 <li class="rodape__list">
                     <a href="https://github.com/lbcamargo94" target="_blank"><img class="icon" src="/sd-016-b-project-lessons-learned/icon/circle-github.png" alt="Github">Github</a>
                 </li>
