--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Lessons Learned</title>
 </head>
 <body>
 
@@ -15,61 +15,57 @@
     <nav>
       <ul><p>Navegação Rápida</p> 
         <li><a href="#rodape">Contatos</a></li>
-        <li><a href="#main">Sobre mim</a></li>
+        <li><a href="#minha_foto">Sobre mim</a></li>
         <li><a href="#learnings">Aprendizados</a> </li>
       </ul>
     </nav>
     <h2>Nathan Nunes</h2>
   </header>
   
-    
-  <main id="main">
-    <section class="img">
+  <main>
+    <section>
       <img id="minha_foto" src="nathannunes.jpeg" alt="Imagem de Nathan Nunes">
     </section>
+  
+    <section id="learnings">
+      <article class="lado-esquerdo">
+        <p>
+          Todos os dias sendo uma pessoa estudante na Trybe me faz ter ainda mais certeza que escolhi o caminho correto, não só na minha 
+          carreira como também em minha escola... Quando escolhi participar do processo seletivo da Trybe, mesmo sem esperanças, vi essa 
+          oportunidade como a ponte entre meus objetivos e o meu referido presente!
+        </p>
+      </article>
+    </section>
 
-    <section class="lado-a-lado">
+    <section class="lado-direito">
       <section>
-        <article class="lado-esquerdo">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure iusto et molestias ex sunt quis vero kdfj uay poi 
-            sit. Non cupiditate suscipit fugit. Perferendis, ratione sint ipsam nemo quas aspernatur. Id, soluta. kjskka jsuuygu jsooquwjmx jsjsjsha
-          </p>
-        </article>
+        <ol id="licoes_aprendidas"> <h2>Aprendizados</h2>
+          <li>Bash</li>
+          <li>Unix</li>
+          <li>Git</li>
+          <li>GitHub</li>
+          <li>Funcionabilidade da Internet</li>
+          <li>Html</li>
+          <li>Css</li>
+          <li>HTML Sêmantico</li>
+          <li>Emoções</li>
+          <li>Empatia</li>
+        </ol>
       </section>
 
-
-
-      <section class="lado-direito" id="learnings">
-        <section>
-          <ol id="licoes_aprendidas"> <h2>aaa</h2>
-            <li>Bash</li>
-            <li>Unix</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>Funcionabilidade da Internet</li>
-            <li>Html</li>
-            <li>Css</li>
-            <li>HTML Sêmantico</li>
-            <li>Pseudoclasses</li>
-            <li>Box Model</li>
-          </ol>
-        </section>
-
-        <section>
-          <ul id="licoes_a_aprender"> <h2>aaa</h2>
-            <li>Array</li>
-            <li>Loop</li>
-            <li>Objetos</li>
-            <li>Funções</li>
-            <li>DOM</li>
-            <li>Web Storage</li>
-            <li>React</li>
-            <li>Jest</li>
-            <li>Backend</li>
-            <li>Introdução a Ciência da Computação</li>
-          </ul>
-        </section>
+      <section>
+        <ul id="licoes_a_aprender"> <h2>Próximos blocos</h2>
+          <li>Introdução a Javascript</li>
+          <li>DOM, Eventos e Web Storage</li>
+          <li>Forms, Flexbox e Responsivos</li>
+          <li>ES6</li>
+          <li>Jest</li>
+          <li>Metodologia Ágil</li>
+          <li>React</li>
+          <li>Gerenciamento com Redux</li>
+          <li>Backend</li>
+          <li>Introdução a Ciência da Computação</li>
+        </ul>
       </section>
     </section>
 
@@ -77,7 +73,7 @@
       <thead>
         <caption>Status Tryber</caption>
         <tr>
-          <th class="unbold">#GoTurma16-B</th>
+          <th class="corner">#GoTurma16-B</th>
           <th>Fundamentos</th>
           <th>Front-end</th>
           <th>Back-end</th>
@@ -123,8 +119,8 @@
     <section>
       <aside class="footerText">
         <p>
-          Esse ano eu tomei a maior decisão da minha vida profissional e dei o passo mais gratificante da minha vida,
-          ambos com o mesmo nome <a href="https://www.betrybe.com/" target="_blank">Trybe!</a>
+          Esse ano eu dei o maior passo na minha estrada profissional e tomei a decisão mais gratificante da minha vida,
+          ambos com o mesmo nome: <a href="https://www.betrybe.com/" target="_blank">Trybe!</a>
         </p>
       </aside>
     </section>
