--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
       <li><a href="#cabecalho">Início</a></li>
       <li><a href="#licoes_aprendidas">Lições</a></li>
       <li><a href="#meu_aprendizado">Meu aprendizado</a></li>
-      <li><a href="https://www.linkedin.com/in/tainnaps/"
-          target="_blank">Linkedin</a></li>
+      <li><a href="#progresso">Progresso</a></li>
       <li><a href="https://github.com/tainnaps" target="_blank">Github</a></li>
     </ul>
   </nav>
@@ -57,6 +56,29 @@
         <li>Aprender programação orientada a objetos</li>
         <li>Metodologias para resolução de problemas</li>
       </ul>
+    </section>
+    <section id="progresso" class="progress-section">
+      <h2>Progresso</h2>
+      <p>Atualmente, curso o módulo de Fundamentos do curso de Desenvolvimento
+        de Software Web na Trybe. Dentre os blocos que compõem este módulo, os
+        seguintes foram completos:</p>
+      <table class="table">
+        <tr>
+          <th>Bloco 1</th>
+          <th>Bloco 2</th>
+          <th>Bloco 3</th>
+        </tr>
+        <tr>
+          <td>Unix</td>
+          <td>Git e Github</td>
+          <td>HTML</td>
+        </tr>
+        <tr>
+          <td>Bash</td>
+          <td>Internet</td>
+          <td>CSS</td>
+        </tr>
+      </table>
     </section>
     <article id="meu_aprendizado" class="lado-esquerdo">
       <h2>Meu aprendizado</h2>
