acho que agora vai

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="cabecalho">Rafael Santos | Lessons Learned</title>
+    <title>Rafael Santos | Lessons Learned</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header id="cabecalho" class="estilo_cabecalho">
+    <a href="#">home</a>
+    <a href="#">login</a>
+    </header>
     <header>
     <h1 id="titulo">Project Trybe</h1>
     </header>
@@ -46,7 +50,7 @@
     </ul>
     </section>
     <article>
-        <h2 class="aprendizado">2 - Aprendizado</h2>
+        <h2 class="aprendizado">Aprendizado</h2>
         <p>Na trybe eu estou tendo uma experiência unica de aprendizado<br>
         aumentando meu conhecimento em desenvolvimento na web e como <br>
         desenvolvedor visando futuramente ter uma melhor carreira e ser<br>
@@ -55,13 +59,13 @@
         na qual eu estou trabalhando naquela empresa.</p>
     </article>
     <aside>
-        <h2 class="aprendizado">3 -Um Momento que ocorreu durante meu aprendizado</h2>
+        <h2 class="aprendizado">2 -Um Momento que ocorreu durante meu aprendizado</h2>
         <p>Os momentos de softskills melhoram bastante a interação entre os alunos<br>
         e um dos momentos que mais me impactou foi o de simpatia e empatia que trouxe <br>
         a diferença dos dois.</p>
     </aside>
     <div>
-    <h2 class="aprendizado">4 - Périodo de aprendizado do curso</h2>
+    <h2 class="aprendizado">3 - Périodo de aprendizado do curso</h2>
     <table>
         <tr>
             <th>inicio</th>
