--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
          <li>Semantica HTML</li>
         </ol>
     </div>
-    <div>
+   <div>
      <ul id="licoes_a_aprender">
         <li>JavaScript</li>
         <li>DOM</li>
@@ -49,14 +49,16 @@
      </ul>
     </div> 
 
-    <footer id="rodape">
+    <div>
+        <section>
+            <article> 
+                <p>Meu aprendizado até aqui não tem sido satisfatório,confesso que imaginei outra coisa, tenho tido dificuldades para aprender certas coisas. Acredito que essa dificuldade se deva por se tratar de área que não tinha visto nada em minha vida, em contrapartida tenho gostado demais das aulas e de todo conteudo que estudo por dia,tenho me esforçado bastante pra obter o máximo de conhecimento possivel, sempre revejo as aulas, busco as duvidas que os outros alunos tem no slack. Estou contente em me sentir tão disposto a aprender de uma forma que eu não sentia a tanto tempo na minha vida</p>
+            </article>
 
-        <article> 
-             <p>
-                 Meu aprendizado até aqui não tem sido satisfatório,confesso que imaginei outra coisa, tenho tido dificuldades para aprender certas coisas. Acredito que essa dificuldade se deva por se tratar de área que não tinha visto nada em minha vida, em contrapartida tenho gostado demais das aulas e de todo conteudo que estudo por dia,tenho me esforçado bastante pra obter o máximo de conhecimento possivel, sempre revejo as aulas, busco as duvidas que os outros alunos tem no slack. Estou contente em me sentir tão disposto a aprender de uma forma que eu não sentia a tanto tempo na minha vida
-            </p>
-        </article>
-            
+            <aside>Tudo que estou vivenciando no curso é novo, estou muito empolgado com cada conteudo que aprendo. Infelizmente não consigo dedicar a parte da manhã aos estudos ainda, mas não vejo a hora de poder usar o dia inteiro para pode aprender.</aside>
+        </section>
+    </div>    
+    <footer id="rodape">
     </footer>
 </body>
 </html>
