Add exercise 12 and exercise 15

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1 id="titulo">Projeto | Número 1</h1>
     <nav id="navegacao">
       <ul>
-        <li><a href="#licoes_aprendidas">Lista</a></li>
+        <li><a href="#minha_foto">Foto</a></li>
         <li><a href="#artigo">Artigo</a></li>
         <li><a href="#secao">Seção</a></li>
       </ul>
@@ -54,16 +54,32 @@
       </div>
     </section>
     <div>
-      <article id="artigo">
+      <article id="artigo" class="lado-esquerdo">
         <p>
           Wow, começamos...<br>
           Como diz o Tio Jack <em>"foguete não dá ré"</em> e tem sido assim durante as primeiras semanas de Trybe. <br>
           Muito conteúdo e muita prática, foram semanas de muito aprendizado e o tempo tem passado bem rápido. Difícil conseguir conciliar tudo, mas motivado com os novos desafios. Vamos com tudo!
         </p>
       </article>
-      <aside id="secao">
+      <aside id="secao" class="lado-direito">
         <p>As primeiras aulas sobre os comandos do Unix foram bem importantes pra mim e me deu mais segurança de como trabalhar no terminal.</p>
       </aside>
+    </div>
+    <div>
+    </div>
+    <div>
+      <table>
+        <tr>
+          <th>Nome</th>
+          <th>Sobrenome</th>
+          <th>Time</th>
+        </tr>
+        <tr>
+          <td>Bruno</td>
+          <td>Matumoto</td>
+          <td>Corinthians</td>
+        </tr>
+      </table>
     </div>
 
     <footer id="rodape">
