ajustes nas linhas do style

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     
-    <div id="cabecalho">
+    <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
-    </div>
+    </header>
     
     <div>
         <img id="minha_foto" src="Erick VIana.png" alt="Homem em um campo de futebol, com blusa preta, calça cinza com braços para trás, segurando um apito enquanto observao uma partida de futebol">
@@ -52,7 +52,7 @@
     <div>
         <section>
             <article> 
-                <p>Meu aprendizado até aqui não tem sido satisfatório,confesso que imaginei outra coisa, tenho tido dificuldades para aprender certas coisas. Acredito que essa dificuldade se deva por se tratar de área que não tinha visto nada em minha vida, em contrapartida tenho gostado demais das aulas e de todo conteudo que estudo por dia,tenho me esforçado bastante pra obter o máximo de conhecimento possivel, sempre revejo as aulas, busco as duvidas que os outros alunos tem no slack. Estou contente em me sentir tão disposto a aprender de uma forma que eu não sentia a tanto tempo na minha vida</p>
+                <p>Meu aprendizado até aqui não tem sido satisfatório,mas acredito que com o tempo irei pegar cada conteudo. Acredito que essa dificuldade se deva por se tratar de área que não tinha visto nada em minha vida, em contrapartida tenho gostado demais das aulas e de todo conteudo que estudo por dia,tenho me esforçado bastante pra obter o máximo de conhecimento possivel, sempre revejo as aulas, busco as duvidas que os outros alunos tem no slack. Estou contente em me sentir tão disposto a aprender de uma forma que eu não sentia a tanto tempo na minha vida</p>
             </article>
 
             <aside>Tudo que estou vivenciando no curso é novo, estou muito empolgado com cada conteudo que aprendo. Infelizmente não consigo dedicar a parte da manhã aos estudos ainda, mas não vejo a hora de poder usar o dia inteiro para pode aprender.</aside>
