14. Altere atributos relacionados as fontes

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
             Meu perfil: <a href="https://www.linkedin.com/in/jonatas-passos-a07333186/" target="_blank">LinkedIn</a>
         </aside>
       </section>
-
+    </div>
+    <section id="tabela">
       <h2>Tabela do conteúdo da Trybe</h2>
       <table>
         <tr>
@@ -100,20 +101,17 @@
           <td>Joins</td>
           <td>POO</td>
         </tr>
-        <tr>
-          <td>GitHub</td>
+        <tr></tr><td>GitHub</td>
           <td>React Router</td>
           <td>ORM</td>
           <td>Redes</td>
         </tr>
-        <tr>
-          <td>HTML</td>
+        <tr><td>HTML</td>
           <td>API</td>
           <td>Subqueries</td>
           <td>Algoritmos</td>
         </tr>
-        <tr>
-          <td>CSS</td>
+        <tr><td>CSS</td>
           <td>React Testing</td>
           <td>MongoDB</td>
           <td>Filas</td>
@@ -125,9 +123,13 @@
           <td>Pilhas</td>
         </tr>
       </table>
-    </div>
+  </section>
   </main>
 
-  <footer id="rodape">Todos os direitos reservados, Jonatas</footer>
+  <footer id="rodape">
+    <h4>
+      Todos os direitos reservados, Jonatas ®
+    </h4>
+  </footer>
 </body>
 </html>
