--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
                 </div>
             </div>
         
-        
+           <!--  /* na descrição de posição das classes lado-direito,lado-esquerdo e ladoalado; foi
+            utilizado o codigo do léo machado
+             (https://github.com/tryber/sd-016-b-project-lessons-learned/pull/20/commits/103b3d9e3fb1cb6f01d1106e2990086be8e8aea2) como base */ -->
+
             <div class="ladoalado">
                 <article class="lado-esquerdo artigo">
                     <h2>meus aprendizados</h2>
