--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </ul>
         </section>
         <article  class="lado-esquerdo">
-            <h2>Depoi</h2>
+            <h2>Depoimento</h2>
             <ul>
                 <li>Lorem Ipsum é simplesmente uma simulação de texto da indústria  tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou  para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a  cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado.
             </ol>
