--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <a href="#">home</a>
     <a href="#">login</a>
     </header>
-    <header>
+    <div>
     <h1 id="titulo">Project Trybe</h1>
-    </header>
+    </div>
     <div>
     <img id="minha_foto" src="Minhafoto.jpg" alt="Foto De Rafael Santos">
     </div>
