--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li id="externo"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Descubra...</a></li>
             </ul>
         </nav>
-        <section id="secao">
+        <article id="secao">
             <section>
                 <img src="imagens/eu.jpg" alt="eu" id="minha_foto">
                 <section id="secao_list">
@@ -55,11 +55,11 @@
                     </ul>
                 </section>
             </section>
-            <article id="artigo">
+            <section id="artigo">
                 <h3>Trecho do livro Os trabalhadores do mar:</h3>
                 Olho do homem é feito de modo que se lhe vê por ele a virtude.A nossa pupila diz que quantidade de homens há dentro de nós.Afirmamo-nos pela luz que fica debaixo da sobrancelha.As pequenas consciencias piscam o olho,as grandes lançam raios.Se não há nada que brilhe debaixo da pálpebra,é que nada há que pense no cérebro,é que nada há que ame no coração.Quem ama quer,e aquele que quer relampeja e cintila.A resolução enche os olhos de fogo:admiravel fogo que se compõem da combustão de pensamentos timidos.
-            </article>
-        </section>
+            </section>
+        </article>
         <aside id="aside">
         <h3>Trecho de A Náusea:</h3>
         Gostaria tanto de me abandonar, de deixar de ter consciência de minha existência, de dormir. Mas não posso, sufoco: a existência penetra em mim por todos os lados, pelos olhos, pelo nariz, pela boca… 
