--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header id="cabecalho" class="estilo_cabecalho">
+    <header>
+        <div id="cabecalho">
     <a href="#">home</a>
     <a href="#">login</a>
+        </div>
+            <h1 id="titulo">Project Trybe</h1>
     </header>
-    <div>
-    <h1 id="titulo">Project Trybe</h1>
-    </div>
-    <div>
     <img id="minha_foto" src="Minhafoto.jpg" alt="Foto De Rafael Santos">
     </div>
     <nav>
